--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ input[type="datetime-local"] {
 
 /* Mobile Phones */
 @media screen and (min-width: 280px) and (max-width: 480px) {
-  body {
+  html, body {
     width: 100vw;
     overflow-x: hidden;
   }
