--- a/src/components/Main/Home.css
+++ b/src/components/Main/Home.css
@@ -1,22 +1,42 @@
-
-
-.landing{
-    margin: 5% 0 10% 0;
+.landing {
+  margin: 5% 0 10% 0;
 }
 
-.landing .mid{
-    width: 70%;
+.landing .mid {
+  width: 70%;
 }
 
-.middle-top{
-    height: 50vh;
+.middle-top .unaligned-cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.middle-bottom{
-    height: 50vh;
+.unaligned-cards span.hor {
+  width: 42%;
 }
 
+.unaligned-cards span.vert {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 24px;
+}
 
+.middle-bottom {
+  margin-top: 5%;
+}
+
+.middle-bottom .aligned-cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  row-gap: 56px;
+  column-gap: 32px;
+}
 
 .ending {
   height: 80vh;
@@ -46,4 +66,34 @@
   line-height: 60px;
   letter-spacing: -0.02em;
   color: #101828;
+}
+
+@media screen and (min-width: 280px) and (max-width: 480px) {
+  .middle-top {
+    flex-direction: column;
+  }
+  .middle-top .unaligned-cards {
+    flex-direction: column;
+  }
+  .middle-top .unaligned-cards .hor {
+    display: none;
+  }
+  .middle-top .unaligned-cards .vert {
+    width: 100%;
+  }
+  .middle-bottom .aligned-cards {
+    gap: 40px;
+  }
+
+  .ending-text {
+    width: 100%;
+    margin-top: 5%;
+  }
+  .ending-text p {
+    font-size: 24px;
+    line-height: 40px;
+  }
+  .ending img {
+    height: 45%;
+  }
 }
