--- a/src/components/Main/Layout.css
+++ b/src/components/Main/Layout.css
@@ -24,7 +24,7 @@ nav ul span.right {
   justify-content: space-between;
   gap: 30px;
 }
-nav ul li a {
+a {
   font-size: 14px;
   font-weight: 500;
   line-height: 24px;
@@ -32,7 +32,7 @@ nav ul li a {
   text-decoration: none;
   opacity: 0.95;
 }
-nav ul li a:hover {
+a:hover {
   opacity: 1;
 }
 
@@ -127,8 +127,40 @@ h3 {
   font-size: 24px;
   line-height: 32px;
   color: #101828;
+  margin-bottom: 2%;
 }
 
-.home, .pricing {
+.home,
+.pricing {
   padding: 10px 70px 10px 70px;
+}
+
+@media screen and (min-width: 280px) and (max-width: 480px) {
+  nav {
+    overflow: hidden;
+  }
+  .home,
+  .pricing {
+    padding: 10px 30px 10px 30px;
+  }
+  .main .big {
+    font-size: 28px;
+    line-height: 40px;
+  }
+
+  .main .mid {
+    font-size: 14px;
+    line-height: 24px;
+  }
+  h3 {
+    font-size: 20px;
+  }
+  footer span.foot {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  footer span.foot span.logo {
+    margin-bottom: 4%;
+  }
 }
