--- a/src/components/minor/Card.css
+++ b/src/components/minor/Card.css
@@ -201,9 +201,120 @@
   align-items: center;
 }
 
+.card {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 0px;
+  gap: 24px;
+  width: 80%;
+  height: 28vh;
+  overflow: hidden;
+}
+
+.card .poster {
+  height: 100%;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  object-fit: contain;
+}
+
+.card .poster img {
+  width: 100%;
+  height: 100%;
+}
+
+.card .details {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 10px;
+  width: 50%;
+  height: 100%;
+}
+
+.card .details .category {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 20px;
+  color: #6941c6;
+}
+.card .details .title {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 28px;
+  color: #101828;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.card .details .desc {
+  width: 100%;
+  height: 70px !important;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  color: #475467;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.card .details .profile {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.profile .avatar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 45px;
+  height: 45px;
+  border: 4px solid #ffffff;
+  box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.08),
+    0px 4px 6px -2px rgba(16, 24, 40, 0.03);
+  border-radius: 200px;
+  background-size: contain;
+}
+
+.avatar-details .name {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 20px;
+  color: #101828;
+}
+
+.avatar-details .date {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #475467;
+}
+
 /* Mobile Phones */
 @media screen and (min-width: 280px) and (max-width: 480px) {
-  .verticalCard{
+  .verticalCard {
     width: 100%;
   }
+  .card{
+    flex-direction: column;
+    height: auto;
+    width: 100%;
+  }
+  .card .poster{
+    width: 100%;
+  }
+  .card .details {
+    width: 100%;
+  }
+
 }
