--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -10,3 +10,15 @@
 .article:hover {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
+
+
+@media screen and (min-width: 280px) and (max-width: 480px){
+  .main-banner{
+    width: 100%;
+  }
+  .article{
+    margin: 0;
+    width: 100%;
+    
+  }
+}
