--- a/src/components/minor/Input.css
+++ b/src/components/minor/Input.css
@@ -43,20 +43,22 @@ p.sub-heading {
 }
 button {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 10px 16px;
-  gap: 8px;
-  font-family: "Inter", sans-serif;
+  padding: 10px 14px;
+  height: 44px;
+  border: 1px solid #d0d5dd;
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
   border-radius: 8px;
-  font-weight: 600;
-  font-size: 0.875rem;
-  line-height: 20px;
-  height: 40px;
-  transition: 0.5s;
-  width: 100%;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  color: #101828;
+  outline: none;
+}
+
+.button{
+  width: 10%;
 }
 
 button.hollow-btn {
@@ -81,7 +83,7 @@ button.full-btn:hover {
 
 label {
   font-weight: 500;
-  font-size: 0.875rem;
+  font-size: 14px;
   line-height: 20px;
   color: #344054;
 }
@@ -95,7 +97,7 @@ input {
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
   border-radius: 8px;
   font-weight: 400;
-  font-size: 1rem;
+  font-size: 14px;
   line-height: 24px;
   color: #101828;
   outline: none;
@@ -110,7 +112,7 @@ input:active {
 textarea {
   font-family: "Inter", "sans-serif";
   font-weight: 400;
-  font-size: 1rem;
+  font-size: 14px;
   line-height: 24px;
   color: #101828;
   display: flex;
@@ -139,7 +141,7 @@ select {
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
   border-radius: 8px;
   font-weight: 500;
-  font-size: 1rem;
+  font-size: 14px;
   line-height: 24px;
   color: #101828;
   outline: none;
