--- a/src/components/Main/NoPage.css
+++ b/src/components/Main/NoPage.css
@@ -1,8 +1,8 @@
 .page404 {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  margin-left: 8%;
+  justify-content: center;
+  align-items: center;
 }
 
 .heading {
