--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -7,6 +7,12 @@
   border-radius: 2px;
 }
 
+.article-view{
+  width: 100%;
+  padding: 10px 0px 10px 0px;
+  margin: 4% 0% 4% 0%;
+}
+
 @media screen and (min-width: 280px) and (max-width: 480px) {
   .main-banner {
     width: 100%;
